# R-KUD

./: .gitignore  README.md  main.py  pyproject.toml
core/: __init__.py  config.py  feature_store.py  models.py  optimization.py
services/: __init__.py  dispatch_service.py  kitchen_state_service.py  monitoring_service.py  reliability_service.py
simulation/: digital_twin.py  generate_report.py
simulation/output/: comparison_table.csv  confidence_intervals.csv  metrics_summary.csv  report.txt
stream/: __init__.py  event_simulator.py  feature_aggregator.py
tests/: test_optimization.py  test_services.py
