[project]
name = "rpkoe"
version = "0.1.0"
description = "Real-Time Probabilistic Kitchen Orchestration Engine (RPKOE)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "httpx>=0.27.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
